add: adding button for download template factor and upload this
Signed-off-by: Rodrigo Catalán López <ext_recatalanl@falabella.cl>

--- a/src/components/Shortening/Factors/Factor.module.css
+++ b/src/components/Shortening/Factors/Factor.module.css
@@ -11,3 +11,18 @@
   display: flex;
   justify-content: flex-start;
 }
+
+.input {
+  display: none;
+}
+
+.buttonModal {
+  display: flex;
+  justify-content: space-between;
+}
+
+.center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
