--- a/src/components/Shortening/Factors/Factors.module.css
+++ b/src/components/Shortening/Factors/Factors.module.css
@@ -1,3 +1,13 @@
+.container {
+  display: flex;
+  flex-direction: row;
+}
+
+.containerTable {
+  flex-grow: 1;
+  padding: 3;
+}
+
 .content {
   margin: 20px;
   padding: 20px;
